2009-07-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/gd.trm (START_HELP(gif)): Document gif animation options.

2009-07-07  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc rev 1.573

2009-07-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c: The code was disabling all mousing and mouse events
	during multiplot.  This had the unfortunate side effect that window
	resizing and placement events were never acknowledged.  If the first
	plot drawn was inside the multiplot, very strange things happened.
	Also hotkeys would not work.  
	Bug #2812476

	* src/gadgets.h src/gadgets.h src/mouse.c (builtin_toggle_border)
	src/set.c:  The 'b' hotkey was a no-op in 2D plots, and lost the current
	user setting for both 2D and 3D plots. Change it to cycle the border
	setting between user / off / full / partial (3D only).

	* src/graphics.c (plot_boxes plot_c_bars do_rectangle do_key_sample):
	Remove the fill_corners() routine and instead call term->fillbox()
	directly rather than dummying up a call to term->filled_polygon().
	Bug #2804784

2009-07-04  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* term/aquaterm.trm (AQUA_options): Fix typo.

2009-07-03  Harald Harders  <h.harders@tu-bs.de>

	* term/cairo.trm: Introduce the struct cairo_params_t that takes all
	pdfcairo and pngcairo terminal options, e.g., color, rounded, fontsize,
	etc., as it is already done in term/post.trm. This is useful when
	different terminals share the same portion of code.

2009-07-02  Mojca Miklavec  <mojca.miklavec.lists@gmail.com>

	* term/aquaterm.c: The "size xx,yy" option should have a comma between
	xx and yy for consistency with other terminals.

2009-06-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_c_bars): Candlestick boxes that were entirely out
	of range on y were nevertheless appearing as a horizontal line along the