@@ -1,3 +1,8 @@
+2009-07-09  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/gadgets.h: Repair incomplete initialization specs for default
+	object properties.
+
 2009-07-08  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* term/gd.trm (START_HELP(gif)): Document gif animation options.
